Bug 438936 - Reconciliation wizard loses balance information
Summary: Reconciliation wizard loses balance information
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-20 07:04 UTC by Thomas Baumgart
Modified: 2023-01-29 13:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: master
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2021-06-20 07:04:51 UTC
SUMMARY
Going backward one step and forward again in the reconciliation wizard causes the start and ending balance to be set to zero.

STEPS TO REPRODUCE
1. Start reconciliation wizard in any account that has been reconciled before
2. Click Next
3. Click Back, Next

OBSERVED RESULT
Start and ending balance are zero

EXPECTED RESULT
Start and ending balance shall show the same values as after step 2.

ADDITIONAL INFORMATION
Applies to master as well.
Comment 1 Thomas Baumgart 2023-01-29 13:42:49 UTC
Git commit d193f80579bed84a0cce4ca17ba336b815ea507e by Thomas Baumgart.
Committed on 29/01/2023 at 13:40.
Pushed by tbaumgart into branch 'master'.

Improve handling of reconciliation

The previous implementation caused all transactions marked as reconciled
to be hidden no matter if they are within the period of of the statement
or not. Also, transactions not marked reconciled but have a post date
prior to the start of the statement were not correctly displayed during
the reconciliation process. This caused the balances to become
"incorrect".

This has been changed to show all transactions from the date of the
first non-reconciled one even if that is prior to the last
reconciliation. All reconciled transactions that have a post date that
is within the period of the statement are also not hidden anymore and
taken into account when calculating the balances. Transactions younger
than the statement date are not taken into account for balance
calculation as before.

I am not sure if this fixes the reported problem 431373 but it is
certainly an improvement.
Related: bug 431373
FIXED-IN: master

M  +21   -11   kmymoney/models/ledgerfilter.cpp
M  +16   -0    kmymoney/models/ledgerfilter.h
M  +2    -0    kmymoney/views/reconciliationledgerviewpage.cpp
M  +5    -0    kmymoney/wizards/endingbalancedlg/checkingstatementinfowizardpage.cpp
M  +7    -0    kmymoney/wizards/endingbalancedlg/checkingstatementinfowizardpage.h
M  +92   -37   kmymoney/wizards/endingbalancedlg/kendingbalancedlg.cpp
M  +9    -0    kmymoney/wizards/endingbalancedlg/kendingbalancedlg.h

https://invent.kde.org/office/kmymoney/commit/d193f80579bed84a0cce4ca17ba336b815ea507e